se maqueto la pagina productos con bootstrap y se incluyo carrusel al index

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,142 +4,213 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <title>Productos de la Tienda</title>
 </head>
 <body>
-    <header class="headerProductos">
+    <header class="container-fluid headerProductos">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
-        <nav>
-            <div>
-                <a href="../Index.html"> INICIO</a>
-                <a href="Productos.html"> PRODUCTOS</a>
-                <a href="La-tienda.html"> LA TIENDA</a>
-                <a href="Contacto.html"> CONTACTO</a>
-                <a href="Mas.html"> MAS..</a>
-            </div>
-        </nav>
 
-        <!--titulo principal-->
-        <div class="cabeceraProductos">
-            <h1 class="h1Productos"> NUESTROS PRODUCTOS</h1>
-        </div>
+        <nav class="navbar navbar-dark bg-dark fixed-top row">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">PRODUCTOS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENU</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="La-tienda.html">LA TIENDA</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../Index.html">CONTACTO</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="Mas.html">Tip de la semana</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Anteriores</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>                   
+                </div>
+            </div>
+        </nav>  
 
     </header>
-    <main>
+    <main class="container-fluid main-productos">
 
-        <!--Secciones -->
-        <div class="menuSecundario">
-            <a href="#Cereales"> CEREALES</a>
-            <a href="#Dulces"> DULCES Y MERMELADAS</a>
-            <a href="#Infusiones"> INFUSIONES</a>
-            <a href="#Lacteos"> LACTEOS</a>
+        <!--titulo principal-->
+
+        <div class="row cabeceraProductos">
+            <h1 class="h1Productos col-12"> NUESTROS PRODUCTOS</h1>
         </div>
 
         <!--lista de productos dividos en secciones-->
-        <a id="Cereales" />
-        <section class="productos"> <p class="subname"> CEREALES </p> 
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Arroz.jpeg" alt="paquete de Arroz">
-                <h3> Arroz Yamani</h3>
-                <p> $180,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Granola.jpeg" alt="Granola">
-                <h3> Granola</h3>
-                <p> $250,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Cereal-Almohaditas.jpeg" alt="almohaditas comestibles">
-                <h3> Almohaditas de Salvado</h3>
-                <p> $220,00</p>
-            </div> 
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Cereal-Trigo.jpeg" alt="Trigo inflado">
-                <h3> Trigo inflado 1kg</h3>
-                <p> $380,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Sesamo.png" alt="Semillas de sesamo">
-                <h3> Semillas de sesamo</h3>
-                <p> $270,00</p>
-            </div>    
-        </section>
-        
-        <a id="Dulces" />
-        <section class="productos"> <p class="subname"> DULCES Y MERMELADAS </p> 
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/DulceLeche.jpeg" alt="tarro de dulce">
-                <h3> Dulce de Leche</h3>
-                <p> $240,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Mermelada.jpeg" alt="Mermelada">
-                <h3> Mermelada organica</h3>
-                <p> $320,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Miel.jpeg" alt="Miel">
-                <h3> Miel pura 500gr</h3>
-                <p> $200,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/pastamani.jpeg" alt="tarro de pasta de mani">
-                <h3> Pasta de Mani natural</h3>
-                <p> $360,00</p>
-            </div>
-        </section>
 
-        <a id="Infusiones" />
-        <section class="productos"> <p class="subname"> INFUSIONES </p>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Te-Verde.jpeg" alt="te verde">
-                <h3> Te Verde suelto 100gr</h3>
-                <p> $190,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Te-Negro.png" alt="Te">
-                <h3> Te Negro</h3>
-                <p> $300,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Yerba antiacida.jpeg" alt="Yerba">
-                <h3> Yerba antiacida 1kg</h3>
-                <p> $840,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Yerba organica.jpeg" alt="paquete de yerba">
-                <h3> Yerba organica 500gr</h3>
-                <p> $530,00</p>
-            </div>
-        </section>
+        <div class="row">
 
-        <a id="Lacteos" />
-        <section class="productos"> <p class="subname"> LACTEOS </p> 
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/lechealmendras.jpeg" alt="caja de leche">
-                <h3> Leche de almendras 1lt</h3>
-                <p> $280,00</p>
+            <div class="col-2 lista">
+                <div id="list-example" class="list-group">
+                    <a class="list-group-item list-group-item-action" href="#list-item-1">CEREALES</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-2">DULCES</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-3">INFUSIONES</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-4">LACTEOS</a>
+                </div>
             </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/Queso.png" alt="queso">
-                <h3> Queso Sardo 100gr</h3>
-                <p> $130,00</p>
+
+            <div class="col-10 lista">
+                <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                    <h4 id="list-item-1">CEREALES</h4>
+                    <section class="row text-center justify-content-center productos">
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/productos/Arroz.jpeg" class="card-img-top"  alt="paquete de arroz">
+                        <div class="card-body">
+                            <h3 class="card-title">Arroz Yamani</h3>
+                            <p class="card-text">$300,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Granola.jpeg" class="card-img-top" alt="Granola">
+                        <div class="card-body">
+                            <h3 class="card-title">Granola</h3>
+                            <p class="card-text">$250,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/trigo-inflado.jpg" class="card-img-top" alt="Trigo inflado">
+                        <div class="card-body">
+                            <h3 class="card-title">Trigo inflado 1kg</h3>
+                            <p class="card-text">$380,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Sesamo.png" class="card-img-top" alt="Semillas de sesamo">
+                        <div class="card-body">
+                            <h3 class="card-title">Semillas de sesamo</h3>
+                            <p class="card-text">$270,00</p>
+                        </div>
+                    </div>
+                    </section>
+                    <h4 id="list-item-2">DULCES</h4>
+                    <section class="row text-center justify-content-center productos">
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/DulceLeche.jpeg" class="card-img-top" alt="tarro de dulce">
+                        <div class="card-body">
+                            <h3 class="card-title"> Dulce de Leche</h3>
+                            <p class="card-text"> $240,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Mermelada.jpeg" class="card-img-top" alt="Mermelada">
+                        <div class="card-body">
+                            <h3 class="card-title"> Mermelada organica</h3>
+                            <p class="card-text"> $320,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Miel.jpeg" class="card-img-top" alt="Miel">
+                        <div class="card-body">
+                            <h3 class="card-title"> Miel pura 500gr</h3>
+                            <p class="card-text"> $200,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/pastamani.jpeg" class="card-img-top" alt="tarro de pasta de mani">
+                        <div class="card-body">
+                            <h3 class="card-title"> Pasta de Mani natural</h3>
+                            <p class="card-text"> $360,00</p>
+                        </div>
+                    </div>
+                    </section>
+                    <h4 id="list-item-3">INFUSIONES</h4>
+                    <section class="row text-center justify-content-center productos">
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Te-Verde.jpeg" class="card-img-top" alt="te verde">
+                        <div>
+                            <h3 class="card-title"> Te Verde suelto 100gr</h3>
+                            <p class="card-text"> $190,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Te-Negro.png" class="card-img-top" alt="Te">
+                        <div>
+                            <h3 class="card-title"> Te Negro</h3>
+                            <p class="card-text"> $300,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Yerba antiacida.jpeg" class="card-img-top" alt="Yerba">
+                        <div>
+                            <h3 class="card-title"> Yerba antiacida 1kg</h3>
+                            <p class="card-text"> $840,00</p>
+                        </div>
+                    </div>
+                    <div class="card col-3 tarjeta" style="width: 10rem;">
+                        <img src="../img/PRODUCTOS/Yerba organica.jpeg" class="card-img-top" alt="paquete de yerba">
+                        <div>
+                            <h3 class="card-title"> Yerba organica 500gr</h3>
+                            <p class="card-text"> $530,00</p>
+                        </div>
+                    </div>
+                    </section>
+                    <h4 id="list-item-4">LACTEOS</h4>
+                    <section class="row text-center justify-content-center productos"> 
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/PRODUCTOS/lechealmendras.jpeg" class="card-img-top" alt="caja de leche">
+                            <div>
+                                <h3 class="card-title"> Leche de almendras 1lt</h3>
+                                <p class="card-text"> $280,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/PRODUCTOS/Queso.jpg" class="card-img-top" alt="queso">
+                            <div>
+                                <h3 class="card-title"> Queso Sardo 100gr</h3>
+                                <p class="card-text"> $130,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/PRODUCTOS/queso.cremoso.jpg" class="card-img-top" alt="queso cremoso envasado">
+                            <div>
+                                <h3 class="card-title"> Queso cremoso 100gr</h3>
+                                <p class="card-text"> $90,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/Yogur-bebible-light-frutilla.jpg" class="card-img-top" alt="Sachet de yogurt bebible">
+                            <div>
+                                <h3 class="card-title"> Yogurt Bebible</h3>
+                                <p class="card-text"> $300,00</p>
+                            </div>
+                        </div>
+                    </section> 
+                </div>
             </div>
-            <div class="tarjeta">
-                <img src="../img/PRODUCTOS/queso.cremoso.jpg" alt="queso cremoso envasado">
-                <h3> Queso cremoso 100gr</h3>
-                <p> $90,00</p>
-            </div>
-            <div class="tarjeta">
-                <img src="../img/productos/Yogur-bebible-light-frutilla.jpg" alt="Sachet de yogurt bebible">
-                <h3> Yogurt Bebible</h3>
-                <p> $300,00</p>
-            </div>
-        </section> 
+
+        </div>
 
     </main>
     <footer class="footerStyle">
@@ -165,6 +236,8 @@
             </div>
         </div>
 
-    </footer> 
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
