--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/bfc30bee4e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/Style.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/Logo-Nutrian.png">
     <title>Tienda NutriAn</title>
 </head>
-
 <body>
     <!-- Encabezado y logo-->
     <header class="headerIndex">
@@ -29,11 +28,26 @@
                 </ul>
             </nav>
         
-            <div class="buscador">
-                <input type="text" placeholder="Busca tu producto..">
-                <div class="logoBuscar">
-                    <i class="fa-solid fa-magnifying-glass icon"></i>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/background.image/Foto-dietéticas.jpg" class="img-carousel" alt="foto dietetica">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/billetera.santafe.png" class="d-block w-100 img-carousel" alt="cartel promocional billetera santa fe">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/3-slider-carousel.jpg" class="d-block w-100 img-carousel" alt="logo empresa">
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
 
@@ -88,5 +102,7 @@
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
