--- a/pages/mas.html
+++ b/pages/mas.html
@@ -4,27 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/bfc30bee4e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/Style.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <title>Nutri-Tip</title>
 </head>
 <body>
 
-    <header class="headerMas">
+    <header class="container-fluid headerMas">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
-        <nav>
-            <div>
-                <a href="../Index.html"> INICIO</a>
-                <a href="Productos.html"> PRODUCTOS</a>
-                <a href="La-tienda.html"> LA TIENDA</a>
-                <a href="Contacto.html"> CONTACTO</a>
-                <a href="Mas.html"> MAS..</a>
+
+        <nav class="navbar navbar-dark bg-dark fixed-top row nav-tienda">
+            <div class="container-fluid col-12">
+                <a class="navbar-brand" href="#">MAS..</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENU</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="Productos.html">PRODUCTOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="Contacto.html">CONTACTO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="La-tienda.html">LA TIENDA</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Secciones</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="Mas.html">Tip de la semana</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Anteriores</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>                   
+                </div>
             </div>
-        </nav>
+        </nav> 
 
         <h1 class="h1Mas"> Tip de la semana!</h1>
 
@@ -78,5 +111,8 @@
         </div>
 
     </footer> 
+
+    <script src="https://kit.fontawesome.com/bfc30bee4e.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
