--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,8 +15,8 @@
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
-        <nav class="navbar navbar-dark bg-dark fixed-top row">
-            <div class="container-fluid">
+        <nav class="navbar navbar-dark bg-dark fixed-top row nav-productos">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="#">PRODUCTOS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                                 <a class="nav-link active" aria-current="page" href="La-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../Index.html">CONTACTO</a>
+                                <a class="nav-link active" aria-current="page" href="Contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
@@ -50,7 +50,7 @@
                             </li>
                         </ul>
 
-                        <form class="d-flex" role="search">
+                        <form class="d-flex buscador" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-success" type="submit">Search</button>
                         </form>
