--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <img class="logoPrincipal" src="img/Logo-Nutrian.png" alt="Logo de la empresa">
 
-    <!--Menu de navegacion y buscador-->
+    <!--Menu de navegacion y carrusel-->
         <div class="menuNav">
             <nav class="indexNav">
                 <ul>
-                    <li><a href="Index.html"> HOME</a></li>
+                    <li><a href="Index.html"> INICIO</a></li>
                     <li><a href="Pages/Productos.html"> PRODUCTOS</a></li>
                     <li><a href="Pages/La-tienda.html"> LA TIENDA</a></li>
                     <li><a href="Pages/Contacto.html"> CONTACTO</a></li>
@@ -31,7 +31,7 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/background.image/Foto-dietéticas.jpg" class="img-carousel" alt="foto dietetica">
+                        <img src="img/background.image/Foto-dietéticas.jpg" class="d-block w-100 img-carousel" alt="foto dietetica">
                     </div>
                     <div class="carousel-item">
                         <img src="img/billetera.santafe.png" class="d-block w-100 img-carousel" alt="cartel promocional billetera santa fe">
@@ -60,20 +60,25 @@
             <h1 class="estiloH1Inicio"> PRODUCTOS DESTACADOS</h1>
         </div>
 
-        <div class="imgIndex1">
+        <div class="imgIndex1 animacionCard">
             <img src="img/producto1.Almendra.jpg" alt="tason de almendras">
-            <h3> Almendras 1kg</h3>
+            <h3 class="h3Index"> Almendras 1kg</h3>
             <p> $800,00</p>
         </div>
-        <div class="imgIndex2">
+        <div class="imgIndex2 animacionCard">
             <img src="img/Producto3.vegetalex.jpg" alt="vegetalex">
-            <h3> Vegetalex 4U.</h3>
+            <h3 class="h3Index"> Vegetalex 4U.</h3>
             <p> $220,00</p>
         </div>
-        <div class="imgIndex3">
+        <div class="imgIndex3 animacionCard">
             <img src="img/producto2.barra-cereal.jpg" alt="Barritas de cereales">
-            <h3> Barra de Cereal</h3>
+            <h3 class="h3Index"> Barra de Cereal</h3>
             <p> $130,00</p>
+        </div>
+        <div class="imgIndex4 animacionCard">
+            <img src="img/productos/Miel.jpeg" alt="tarro de miel">
+            <h3 class="h3Index"> Miel 500gr</h3>
+            <p> $280</p>
         </div>
 
     </main>
