--- a/pages/productos.html
+++ b/pages/productos.html
@@ -51,8 +51,8 @@
                         </ul>
 
                         <form class="d-flex buscador" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-success" type="submit">Search</button>
+                            <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Buscar</button>
                         </form>
                     </div>                   
                 </div>
