--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="menuNav">
             <nav class="indexNav">
                 <ul>
-                    <li><a href="Index.html"> INICIO</a></li>
+                    <li><a href="./Index.html"> INICIO</a></li>
                     <li><a href="Pages/Productos.html"> PRODUCTOS</a></li>
                     <li><a href="Pages/La-tienda.html"> LA TIENDA</a></li>
                     <li><a href="Pages/Contacto.html"> CONTACTO</a></li>
