modificacion de ruteos para entregas maquetando bt, aplicando bt y segunda entrega final project

--- a/index.html
+++ b/index.html
@@ -6,38 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/Style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="img/Logo-Nutrian.png">
+    <link rel="stylesheet" href="./CSS/Style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/Logo-Nutrian.png">
     <title>Tienda NutriAn</title>
 </head>
 <body>
     <!-- Encabezado y logo-->
     <header class="headerIndex">
 
-        <img class="logoPrincipal" src="img/Logo-Nutrian.png" alt="Logo de la empresa">
+        <img class="logoPrincipal" src="./img/Logo-Nutrian.png" alt="Logo de la empresa">
 
     <!--Menu de navegacion y carrusel-->
         <div class="menuNav">
             <nav class="indexNav">
                 <ul>
-                    <li><a href="Index.html"> INICIO</a></li>
-                    <li><a href="Pages/Productos.html"> PRODUCTOS</a></li>
-                    <li><a href="Pages/La-tienda.html"> LA TIENDA</a></li>
-                    <li><a href="Pages/Contacto.html"> CONTACTO</a></li>
-                    <li><a href="Pages/Mas.html"> MAS..</a></li>
+                    <li><a href="./index.html"> INICIO</a></li>
+                    <li><a href="./pages/productos.html"> PRODUCTOS</a></li>
+                    <li><a href="./pages/la-tienda.html"> LA TIENDA</a></li>
+                    <li><a href="./pages/contacto.html"> CONTACTO</a></li>
+                    <li><a href="./pages/mas.html"> MAS..</a></li>
                 </ul>
             </nav>
         
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/background.image/Foto-dietéticas.jpg" class="d-block w-100 img-carousel" alt="foto dietetica">
+                        <img src="./img/background.image/Foto-dietéticas.jpg" class="d-block w-100 img-carousel" alt="foto dietetica">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/billetera.santafe.png" class="d-block w-100 img-carousel" alt="cartel promocional billetera santa fe">
+                        <img src="./img/billetera.santafe.png" class="d-block w-100 img-carousel" alt="cartel promocional billetera santa fe">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/3-slider-carousel.jpg" class="d-block w-100 img-carousel" alt="logo empresa">
+                        <img src="./img/3-slider-carousel.jpg" class="d-block w-100 img-carousel" alt="logo empresa">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -61,22 +61,22 @@
         </div>
 
         <div class="imgIndex1 animacionCard">
-            <img src="img/producto1.Almendra.jpg" alt="tason de almendras">
+            <img src="./img/producto1.Almendra.jpg" alt="tason de almendras">
             <h3 class="h3Index"> Almendras 1kg</h3>
             <p> $800,00</p>
         </div>
         <div class="imgIndex2 animacionCard">
-            <img src="img/Producto3.vegetalex.jpg" alt="vegetalex">
+            <img src="./img/Producto3.vegetalex.jpg" alt="vegetalex">
             <h3 class="h3Index"> Vegetalex 4U.</h3>
             <p> $220,00</p>
         </div>
         <div class="imgIndex3 animacionCard">
-            <img src="img/producto2.barra-cereal.jpg" alt="Barritas de cereales">
+            <img src="./img/producto2.barra-cereal.jpg" alt="Barritas de cereales">
             <h3 class="h3Index"> Barra de Cereal</h3>
             <p> $130,00</p>
         </div>
         <div class="imgIndex4 animacionCard">
-            <img src="img/productos/Miel.jpeg" alt="tarro de miel">
+            <img src="./img/productos/Miel.jpeg" alt="tarro de miel">
             <h3 class="h3Index"> Miel 500gr</h3>
             <p> $280</p>
         </div>
@@ -88,20 +88,20 @@
         <!-- informacion para transacciones y redes sociales-->
         <div class="logoPago">
             <h2 class="h2Pago"> MEDIOS DE PAGO</h2>    
-            <img src="img/mercadopago.png" alt="Logo de mercado pago">
-            <img src="img/footer-visa.png" alt="Logo de visa">
-            <img src="img/footer-transferencia.png" alt="Logo de transferencia bancaria">
-            <img src="img/footer-efectivo.png" alt="Logo de pago en efectivo">
+            <img src="./img/mercadopago.png" alt="Logo de mercado pago">
+            <img src="./img/footer-visa.png" alt="Logo de visa">
+            <img src="./img/footer-transferencia.png" alt="Logo de transferencia bancaria">
+            <img src="./img/footer-efectivo.png" alt="Logo de pago en efectivo">
         </div>
 
         <div>
             <h2 class="h2Posicion"> SEGUINOS</h2>
             <div class="logoRedes">
-                <img class="logoI" src="img/footer-Instagram-Logo.png" alt="logo de instagram">
+                <img class="logoI" src="./img/footer-Instagram-Logo.png" alt="logo de instagram">
                 <p class="logoStyle"> @TiendaNutriAn</p>
             </div>
             <div class="logoRedes">
-            <img class="logoF" src="img/footer-logo.Face.webp" alt="logo de facebook">
+            <img class="logoF" src="./img/footer-logo.Face.webp" alt="logo de facebook">
             <p class="logoStyle"> / NutriAn dietetica</p>
             </div>
         </div>
