--- a/pages/productos.html
+++ b/pages/productos.html
@@ -35,15 +35,15 @@
                                 <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="La-tienda.html">LA TIENDA</a>
+                                <a class="nav-link active" aria-current="page" href="./La-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="Contacto.html">CONTACTO</a>
+                                <a class="nav-link active" aria-current="page" href="./Contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="Mas.html">Tip de la semana</a></li>
+                                    <li><a class="dropdown-item" href="./Mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Anteriores</a></li>
                                 </ul>
