modificacion de ruteos para entregas maquetando con bt, aplicando bt y segunda entrega proyecto final

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Productos de la Tienda</title>
 </head>
 <body>
@@ -32,18 +32,18 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./La-tienda.html">LA TIENDA</a>
+                                <a class="nav-link active" aria-current="page" href="./la-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Contacto.html">CONTACTO</a>
+                                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="./Mas.html">Tip de la semana</a></li>
+                                    <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Anteriores</a></li>
                                 </ul>
@@ -93,21 +93,21 @@
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Granola.jpeg" class="card-img-top" alt="Granola">
+                        <img src="../img/productos/Granola.jpeg" class="card-img-top" alt="Granola">
                         <div class="card-body">
                             <h3 class="card-title">Granola</h3>
                             <p class="card-text">$250,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/trigo-inflado.jpg" class="card-img-top" alt="Trigo inflado">
+                        <img src="../img/productos/trigo-inflado.jpg" class="card-img-top" alt="Trigo inflado">
                         <div class="card-body">
                             <h3 class="card-title">Trigo inflado 1kg</h3>
                             <p class="card-text">$380,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Sesamo.png" class="card-img-top" alt="Semillas de sesamo">
+                        <img src="../img/productos/Sesamo.png" class="card-img-top" alt="Semillas de sesamo">
                         <div class="card-body">
                             <h3 class="card-title">Semillas de sesamo</h3>
                             <p class="card-text">$270,00</p>
@@ -117,28 +117,28 @@
                     <h4 id="list-item-2">DULCES</h4>
                     <section class="row text-center justify-content-center productos">
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/DulceLeche.jpeg" class="card-img-top" alt="tarro de dulce">
+                        <img src="../img/productos/DulceLeche.jpeg" class="card-img-top" alt="tarro de dulce">
                         <div class="card-body">
                             <h3 class="card-title"> Dulce de Leche</h3>
                             <p class="card-text"> $240,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Mermelada.jpeg" class="card-img-top" alt="Mermelada">
+                        <img src="../img/productos/Mermelada.jpeg" class="card-img-top" alt="Mermelada">
                         <div class="card-body">
                             <h3 class="card-title"> Mermelada organica</h3>
                             <p class="card-text"> $320,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Miel.jpeg" class="card-img-top" alt="Miel">
+                        <img src="../img/productos/Miel.jpeg" class="card-img-top" alt="Miel">
                         <div class="card-body">
                             <h3 class="card-title"> Miel pura 500gr</h3>
                             <p class="card-text"> $200,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/pastamani.jpeg" class="card-img-top" alt="tarro de pasta de mani">
+                        <img src="../img/productos/pastamani.jpeg" class="card-img-top" alt="tarro de pasta de mani">
                         <div class="card-body">
                             <h3 class="card-title"> Pasta de Mani natural</h3>
                             <p class="card-text"> $360,00</p>
@@ -148,28 +148,28 @@
                     <h4 id="list-item-3">INFUSIONES</h4>
                     <section class="row text-center justify-content-center productos">
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Te-Verde.jpeg" class="card-img-top" alt="te verde">
+                        <img src="../img/productos/Te-Verde.jpeg" class="card-img-top" alt="te verde">
                         <div>
                             <h3 class="card-title"> Te Verde suelto 100gr</h3>
                             <p class="card-text"> $190,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Te-Negro.png" class="card-img-top" alt="Te">
+                        <img src="../img/productos/Te-Negro.png" class="card-img-top" alt="Te">
                         <div>
                             <h3 class="card-title"> Te Negro</h3>
                             <p class="card-text"> $300,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Yerba antiacida.jpeg" class="card-img-top" alt="Yerba">
+                        <img src="../img/productos/Yerba antiacida.jpeg" class="card-img-top" alt="Yerba">
                         <div>
                             <h3 class="card-title"> Yerba antiacida 1kg</h3>
                             <p class="card-text"> $840,00</p>
                         </div>
                     </div>
                     <div class="card col-3 tarjeta" style="width: 10rem;">
-                        <img src="../img/PRODUCTOS/Yerba organica.jpeg" class="card-img-top" alt="paquete de yerba">
+                        <img src="../img/productos/Yerba organica.jpeg" class="card-img-top" alt="paquete de yerba">
                         <div>
                             <h3 class="card-title"> Yerba organica 500gr</h3>
                             <p class="card-text"> $530,00</p>
@@ -179,21 +179,21 @@
                     <h4 id="list-item-4">LACTEOS</h4>
                     <section class="row text-center justify-content-center productos"> 
                         <div class="card col-3 tarjeta" style="width: 10rem;">
-                            <img src="../img/PRODUCTOS/lechealmendras.jpeg" class="card-img-top" alt="caja de leche">
+                            <img src="../img/productos/lechealmendras.jpeg" class="card-img-top" alt="caja de leche">
                             <div>
                                 <h3 class="card-title"> Leche de almendras 1lt</h3>
                                 <p class="card-text"> $280,00</p>
                             </div>
                         </div>
                         <div class="card col-3 tarjeta" style="width: 10rem;">
-                            <img src="../img/PRODUCTOS/Queso.jpg" class="card-img-top" alt="queso">
+                            <img src="../img/productos/Queso.jpg" class="card-img-top" alt="queso">
                             <div>
                                 <h3 class="card-title"> Queso Sardo 100gr</h3>
                                 <p class="card-text"> $130,00</p>
                             </div>
                         </div>
                         <div class="card col-3 tarjeta" style="width: 10rem;">
-                            <img src="../img/PRODUCTOS/queso.cremoso.jpg" class="card-img-top" alt="queso cremoso envasado">
+                            <img src="../img/productos/queso.cremoso.jpg" class="card-img-top" alt="queso cremoso envasado">
                             <div>
                                 <h3 class="card-title"> Queso cremoso 100gr</h3>
                                 <p class="card-text"> $90,00</p>
