--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,23 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
 <body class="hojaContacto">
     <header class="container-fluid headerContacto">
 
-        <!--Menu de navegacion para poder moverme a las demas paginas
-        <nav>
-            <div>
-                <a href="../Index.html"> INICIO</a>
-                <a href="Productos.html"> PRODUCTOS</a>
-                <a href="La-tienda.html"> LA TIENDA</a>
-                <a href="Contacto.html"> CONTACTO</a>
-                <a href="Mas.html"> MAS..</a>
-            </div>
-        </nav>-->
-
+        <!--Menu de navegacion para poder moverme a las demas paginas-->
 
         <nav class="navbar navbar-dark bg-dark fixed-top row nav-contacto">
             <div class="container-fluid col-12">
@@ -42,18 +32,18 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Productos.html">PRODUCTOS</a>
+                                <a class="nav-link active" aria-current="page" href="./productos.html">PRODUCTOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./La-tienda.html">LA TIENDA</a>
+                                <a class="nav-link active" aria-current="page" href="./la-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="./Mas.html">Tip de la semana</a></li>
+                                    <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Anteriores</a></li>
                                 </ul>
@@ -70,6 +60,7 @@
     <main class="mainContacto">
 
         <!--Formulario de contacto-->
+        
         <form class="formulario">
             <fieldset>
                 <legend> CONTACTO</legend>
