--- a/pages/mas.html
+++ b/pages/mas.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Nutri-Tip</title>
 </head>
 <body>
@@ -34,21 +34,21 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../Index.html">INICIO</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Productos.html">PRODUCTOS</a>
+                                <a class="nav-link active" aria-current="page" href="./productos.html">PRODUCTOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Contacto.html">CONTACTO</a>
+                                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./La-tienda.html">LA TIENDA</a>
+                                <a class="nav-link active" aria-current="page" href="./la-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Secciones</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="./Mas.html">Tip de la semana</a></li>
+                                    <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Anteriores</a></li>
                                 </ul>
